<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="Email Address: "
        android:textColor="@color/blue_4"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_round"
        android:hint="Your Email Address"
        android:padding="12dp" />

    <CheckBox
        android:id="@+id/cb_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/blue_4"
        android:text="Send feedback daily"
        android:checked="true"/>

    <LinearLayout
        android:id="@+id/layout_chooseTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="12dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:background="@drawable/bg_round">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_send_time"
            android:textSize="15sp"
            android:textColor="@color/blue_4"/>

        <TimePicker
            android:id="@+id/send_time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:timePickerMode="spinner" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_time_note"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/set_email_note"/>

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_normal"
        android:text="Submit"
        android:textColor="@color/blue_4" />

</LinearLayout>